# log-anomaly-pipeline

./: Dockerfile  README.md  docker-compose.yml  kafka_check.py  main.py  pyproject.toml
alert/: main.py
docs/: architecture.mmd  gen_diagram.py
features/: extractor.py
ingestion/: consumer.py  main.py
init-db/: 01_schema.sql
producer/: main.py
